# badgemagic-firmware

./: .gitignore  CMakeLists.txt  mrs_toolchain.cmake  wchisp.cmake
